--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>io.xream.sqli</groupId>
     <artifactId>sqli-annotation</artifactId>
     <version>1.0.0</version>
+    <name>sqli-annotation</name>
     <description>http://sqli.xream.io</description>
     <packaging>jar</packaging>
     <url>http:/sqli.xream.io</url>
